Uninitialized variable causes crash -- fixed

As reported by Arseniy Lartsev, there was an uninitialized
variable in SearchResultsPrivate's constructor.
Due to being uninitialized, KBibTeX could be crashed by
clicking on the Import button if no search had been conducted
earlier.

Patch 91252 by A.L. has been applied with minor modifications.
Thanks!

BUG: 344495